Bug 1161659. FxOS - Add Spice Fire One MI FX2.
- Remove temp Panasonic TV waffle logic.

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -137,6 +137,7 @@
             <li><a class="spice" href="http://www.snapdeal.com/product/spice-fire-one-mifx1/531126742">Spice Fire One MI FX1</a></li>
             <li><a class="flipkart" href="http://www.flipkart.com/alcatel-onetouch-firec-4020d/p/itmdys6qffvs6tfd?pid=MOBDYS6NFPNRJUKF&amp;srno=b_10&amp;ref=aa7b01a4-0479-4661-a1e8-19033b513612">Alcatel One Touch Fire C 2G</a></li>
             <li><a class="zen" href="http://www.homeshop18.com/zen-fire-fox-phone-u105/mobiles/mobile-phones/product:32873765/cid:3027/">Zen 105 Fire</a></li>
+            <li><a class="spice" href="http://www.saholic.com/mobile-phones/spice-fire-one-mi-fx2-1012486">Spice Fire One MI FX2</a></li>
           </ul>
         </div>
         <div class="provider" data-country="jp">
