Bug 1162153. Orange Klif Tunisia availability.

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -237,6 +237,12 @@
             <li><a class="movistar" href="http://www.movistar.com.sv/tienda/Open-Catalog/Productos/Celulares/c/celulares?q=%3Aname-asc%3Abrand%3Abrand_alcatel%3ASistema+Operativo%3AFirefox+OS">{{_('Movistar')}}</a></li>
           </ul>
         </div>
+        <div class="provider" data-country="tn">
+          <h3>{{ _('Tunisia') }}</h3>
+          <ul>
+            <li><a class="orange" href="http://klif.orange.tn">Orange</a></li>
+          </ul>
+        </div>
         <div class="provider" data-country="uy">
           <h3>{{_('Uruguay')}}</h3>
           <ul>
