--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -101,6 +101,7 @@
               <option value="za">{{ _('South Africa') }}</option>
               <option value="es">{{ _('Spain') }}</option>
               <option value="ch">{{ _('Switzerland') }}</option>
+              <option value="tn">{{ _('Tunisia') }}</option>
               <option value="gb">{{ _('United Kingdom') }}</option>
               <option value="uy">{{ _('Uruguay') }}</option>
               <option value="ve">{{ _('Venezuela') }}</option>
@@ -2320,6 +2321,7 @@
 
                   <ul class="comma-list">
                     <li>{{ _('Madagascar') }}</li>
+                    <li>{{ _('Tunisia') }}</li>
                   </ul>
 
                   <h5>{{ _('Operator') }}</h5>
