Fix Bug 1165125 - Optimize legal pages for RTL

--- a/media/css/foundation/annual2012.less
+++ b/media/css/foundation/annual2012.less
@@ -290,11 +290,7 @@ html[dir="rtl"] {
 			&:before {
 				right: 0;
 				left: auto;
-				-moz-transform:     scale(-1, 1);
-				-ms-transform:      scale(-1, 1);
-				-o-transform:       scale(-1, 1);
-				-webkit-transform:  scale(-1, 1);
-				transform:          scale(-1, 1);
+				.flip-horizontally;
 			}
 		}
 	}
