--- a/media/css/mozorg/about-base.less
+++ b/media/css/mozorg/about-base.less
@@ -126,6 +126,13 @@
     }
 }
 
+html[dir="rtl"] {
+    #main-content .title-shadow-box {
+        margin-right: 0;
+        margin-left: 490px;
+    }
+}
+
 // Leadership
 .about-leadership .main-column h2 {
     padding-bottom: 15px;
@@ -273,6 +280,13 @@
 
     }
 
+    html[dir="rtl"] {
+        #main-content .title-shadow-box {
+            margin-right: 0;
+            margin-left: 250px;
+        }
+    }
+
     .gallery .vcard {
         .span_narrow(2);
         margin-bottom: @baseLine;
@@ -336,6 +350,12 @@
             }
         }
 
+    }
+
+    html[dir="rtl"] {
+        #main-content .title-shadow-box {
+            margin-left: 0;
+        }
     }
 
     .gallery .vcard {
