--- a/bedrock/privacy/templates/privacy/index.html
+++ b/bedrock/privacy/templates/privacy/index.html
@@ -41,7 +41,7 @@
           privacy policies, please get in touch with:
         {%- endtrans -%}
       </p>
-      <p itemscope itemtype="http://schema.org/Organization">
+      <p lang="en" dir="ltr" itemscope itemtype="http://schema.org/Organization">
         <span itemprop="name">Mozilla Corporation</span><br>
         <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
           {{ _('Attn:') }} <span itemprop="name">Legal Notices - Privacy</span><br>
