Keep using /firefox/os/index-new as source for strings with add_lang_file

--- a/bedrock/firefox/templates/firefox/os/ver/2.0.html
+++ b/bedrock/firefox/templates/firefox/os/ver/2.0.html
@@ -4,6 +4,6 @@
 
 {% extends "firefox/os/index.html" %}
 
-{% add_lang_files "firefox/os/index" "firefox/os/devices" %}
+{% add_lang_files "firefox/os/index-new" "firefox/os/devices" %}
 
 {% block body_class %}{{ super() }} v2-0{% endblock %}
