--- a/bedrock/firefox/templates/firefox/os/index.html
+++ b/bedrock/firefox/templates/firefox/os/index.html
@@ -7,6 +7,7 @@
 {% extends "firefox/base-resp.html" %}
 
 {% add_lang_files "firefox/os/devices" %}
+{% add_lang_files "firefox/os/index-new" %}
 
 {% block page_title_prefix %}{% endblock %}
 {% block page_image %}{{ static('img/firefox/os/page-image.png') }}{% endblock %}
