Bug 1166324. FxOS Orange Klif Cameroon availability.

--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -72,6 +72,7 @@
               <option value="bd">{{ _('Bangladesh') }}</option>
               <option value="be">{{ _('Belgium') }}</option>
               <option value="br">{{ _('Brazil') }}</option>
+              <option value="cm">{{ _('Cameroon') }}</option>
               <option value="cl">{{ _('Chile') }}</option>
               <option value="co">{{ _('Colombia') }}</option>
               <option value="cr">{{ _('Costa Rica') }}</option>
@@ -2320,6 +2321,7 @@
                   <h5>{{ _('Available in') }}</h5>
 
                   <ul class="comma-list">
+                    <li>{{ _('Cameroon') }}</li>
                     <li>{{ _('Madagascar') }}</li>
                     <li>{{ _('Tunisia') }}</li>
                   </ul>
