--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -48,6 +48,12 @@
             <li><a class="ldlc" href="http://www.ldlc.ch/fiche/PB00171571.html">LDLC</a></li>
           </ul>
         </div>
+        <div class="provider" data-country="cm">
+          <h3>{{ _('Cameroon') }}</h3>
+          <ul>
+            <li><a class="orange" href="https://www.orange.sn/produit/orangeklif/">Orange</a></li>
+          </ul>
+        </div>
         <div class="provider" data-country="co">
           <h3>{{_('Colombia')}}</h3>
           <ul>
