--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -98,6 +98,7 @@
               <option value="ph">{{ _('Philippines') }}</option>
               <option value="pl">{{ _('Poland') }}</option>
               <option value="ru">{{ _('Russia') }}</option>
+              <option value="sn">{{ _('Senegal') }}</option>
               <option value="rs">{{ _('Serbia') }}</option>
               <option value="za">{{ _('South Africa') }}</option>
               <option value="es">{{ _('Spain') }}</option>
@@ -2323,6 +2324,7 @@
                   <ul class="comma-list">
                     <li>{{ _('Cameroon') }}</li>
                     <li>{{ _('Madagascar') }}</li>
+                    <li>{{ _('Senegal') }}</li>
                     <li>{{ _('Tunisia') }}</li>
                   </ul>
 
