Bug 1167223 Capitalization fix on Content Services

--- a/bedrock/mozorg/templates/mozorg/contentservices/faq.html
+++ b/bedrock/mozorg/templates/mozorg/contentservices/faq.html
@@ -4,7 +4,7 @@
 
 {% extends "mozorg/contentservices/base.html" %}
 
-{% block page_title %}{{ _('Frequently Asked Questions') }}{% endblock %}
+{% block page_title %}{{ _('Frequently asked questions') }}{% endblock %}
 {% block body_id %}contentservices-faq{% endblock %}
 
 {% block page_css %}
@@ -19,15 +19,15 @@
 <h1 class="title-shadow-box">{{ self.page_title() }}</h1>
 
 <ul class="toc">
-  <li><a href="#top">{{ _('Top Questions') }}</a></li>
-  <li><a href="#audience">{{ _('Audience and Coverage') }}</a></li>
+  <li><a href="#top">{{ _('Top questions') }}</a></li>
+  <li><a href="#audience">{{ _('Audience and coverage') }}</a></li>
   <li><a href="#requirements">{{ _('Requirements') }}</a></li>
   <li><a href="#reporting">{{ _('Reporting') }}</a></li>
   <li><a href="#pricing">{{ _('Pricing') }}</a></li>
 </ul>
 
 <section id="top" class="accordion accordion-auto-init zebra">
-  <h2>{{ _('Top Questions') }}</h2>
+  <h2>{{ _('Top questions') }}</h2>
 
   <section>
     <h3 data-accordion-role="tab">{{ _('What makes Tiles different from other advertising approaches?') }}</h3>
@@ -95,7 +95,7 @@
 </section>
 
 <section id="audience" class="accordion accordion-auto-init zebra">
-  <h2>{{ _('Audience and Coverage') }}</h2>
+  <h2>{{ _('Audience and coverage') }}</h2>
 
   <section>
     <h3 data-accordion-role="tab">{{ _('What’s the potential reach?') }}</h3>
