--- a/bedrock/mozorg/templates/mozorg/contentservices/tiles.html
+++ b/bedrock/mozorg/templates/mozorg/contentservices/tiles.html
@@ -65,7 +65,7 @@
     {{ high_res_img('img/contentservices/tiles-settings.jpg', {'alt': 'Tiles settings screenshot', 'width': '620'}) }}
   </p>
 
-  <h3 id="partnering">{{ _('Partnering With Mozilla') }}</h3>
+  <h3 id="partnering">{{ _('Partnering with Mozilla') }}</h3>
 
   <p>
     {{ _('Firefox has hundreds of millions of users worldwide, and over 80 million in the US.') }}
