Bug 1146344. GTM conversion: bug fixes and code cleanup.

--- a/bedrock/firefox/templates/firefox/nightly_firstrun.html
+++ b/bedrock/firefox/templates/firefox/nightly_firstrun.html
@@ -91,6 +91,4 @@
 
 {% block email_form %}{% endblock %}
 
-{% block js %}
-  {% javascript 'nightly-firstrun' %}
-{% endblock %}
+{% block js %}{% endblock %}
