--- a/bedrock/firefox/templates/firefox/sync-new.html
+++ b/bedrock/firefox/templates/firefox/sync-new.html
@@ -89,7 +89,7 @@
             {{ _('Download Firefox for Android') }}
           </a>
           <p class="button-footer">
-            <a href="https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync" class="ga-link" data-interaction="outbound link click"
+            <a href="https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync" class="ga-link" data-interaction="outbound link click">
               {{ _('Need help?') }}
             </a>
         </div>
