--- a/bedrock/mozorg/templates/mozorg/contribute/studentambassadors/landing.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/studentambassadors/landing.html
@@ -103,6 +103,4 @@
 
 {% block email_form %}{% endblock %}
 
-{% block js %}
-  {% javascript 'contribute-studentambassadors-landing' %}
-{% endblock %}
+{% block js %}{% endblock %}
