--- a/bedrock/mozorg/templates/mozorg/contact/communities/croatia.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/croatia.html
@@ -15,6 +15,8 @@
         <ul class="extra">
           <li><a href="http://mozilla-hr.org" class="website">mozilla-hr.org</a></li>
           <li><a href="https://twitter.com/MozillaHrvatska" class="twitter">@MozillaHrvatska</a></li>
+          <li><a href="https://www.facebook.com/mozilla.hrvatska" class="facebook">Facebook</a></li>
+          <li><a href="irc://irc.mozilla.org/croatia" class="irc">IRC: #croatia</a></li>
           <li><a href="https://lists.mozilla.org/listinfo/community-croatia" class="email">{{ _('Mailing list') }}</a></li>
         </ul>
 
