Bu 1166324. Update Orange Klif Cameroon purchase URL.

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -51,7 +51,7 @@
         <div class="provider" data-country="cm">
           <h3>{{ _('Cameroon') }}</h3>
           <ul>
-            <li><a class="orange" href="https://www.orange.sn/produit/orangeklif/">Orange</a></li>
+            <li><a class="orange" href="http://www.orange.cm/fr/smartphones/">Orange</a></li>
           </ul>
         </div>
         <div class="provider" data-country="co">
