--- a/media/css/base/mozilla-modal.less
+++ b/media/css/base/mozilla-modal.less
@@ -20,6 +20,7 @@ html.noscroll body {
     left: 0;
     z-index: 9999999;
     overflow: auto;
+    .animation(sand-fade-in 0.3s ease-in 0s 1 normal both);
 
     .window {
         padding: 20px;
